--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,17 @@
-.App {
-  text-align: center;
+.app__container {
+    background-color: white;
+    margin: auto;
+    margin-top: 60px;
+    width: 80%;
+    height: 800px;
+    border-radius: 10px;
+    box-shadow: 
+             0 -3em 3em rgba(0,0,0,0.1), 
+             0.3em 0.3em 1em rgba(0,0,0,0.3);
+        
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app__container {
+    display: flex;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
