--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -3,6 +3,12 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
+    height: 800px;
+    overflow: auto;
+}
+
+.dashboard__container > h1 {
+    letter-spacing: 1px;
 }
 
 .dashboard__widgets__container {
@@ -17,4 +23,5 @@
     /* border-radius: 10px; */
     margin-right: 15px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    overflow:auto;
 }
